# Sausedemo_automation_project

./: conftest.py  pyproject.toml
.github/workflows/: github-actions.yml
pages/: base_page.py  locators.py  login_page.py
tests/: test_login_page.py
