[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Aigul Mustafina <aimustafina2016@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
flake8 = "^5.0.4"
selenium = "^4.5.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
